--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,23 +1,25 @@
-version: '3.0'
-
+version: "3.0"
 services:
   web:
-    build: ./services/web
-    command: python manage.py run -h 0.0.0.0
-    volumes:
-      - ./services/web/:/usr/src/app/
+    build: ./forecase_app
     ports:
-      - 5000:5000
+      - "8000:8000"
+    command: python manage.py runserver 0.0.0.0:8000
+    volumes:
+      - ./forecase_app/:/usr/src/app/
     env_file:
       - ./.env.dev
+    depends_on:
+      - db
   db:
-    image: postgres:13-alpine
+    image: postgres:13
     volumes:
       - postgres_data:/var/lib/postgresql/data/
     environment:
-      - POSTGRES_USER=hello_flask
-      - POSTGRES_PASSWORD=hello_flask
-      - POSTGRES_DB=hello_flask_dev
+      - "POSTGRES_USER=forecast_user"
+      - "POSTGRES_PASSWORD=postgres"
+      - "POSTGRES_DB=forecast"
+      - "POSTGRES_HOST_AUTH_METHOD=trust"
 
 volumes:
   postgres_data:
