--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,12 +1,12 @@
 version: "3.0"
 services:
   web:
-    build: ./forecase_app
+    build: ./forecast_app
     ports:
       - "8000:8000"
     command: python manage.py runserver 0.0.0.0:8000
     volumes:
-      - ./forecase_app/:/usr/src/app/
+      - ./forecast_app/:/usr/src/app/
     env_file:
       - ./.env.dev
     depends_on:
